src/styles/dz.scss
@use "sass:math";

.elDropZone {
  width: 100%;
  min-height: 200px;
  border: 2px solid var(--fore);
  border-style: dashed;
  cursor: pointer;
  border-radius: 10px;
  display: grid;
  place-items: center;
  background: transparent;
  transition: all 0.2s var(--sleek);
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;

  transition: all .2s var(--sleek);


  .dropIco {
    color: var(--fore);
  }

  &.dragover {
    border-color: var(--accent);
    background: var(--primSecondary);
  }

  .fileNameList {
    font-size: 0.3rem;
  }

  &.errNudge {
    animation: shake .3s;
  }

  &.drop {
    animation: drop .3s;
  }

}

.dropzone,
.dropzone * {
  box-sizing: border-box;
}

.dropzone {

  position: relative;

  &.dz-clickable {
    cursor: pointer;

    * {
      cursor: default;
    }

    .dz-message {

      &,
      * {
        cursor: pointer;
      }
    }
  }

  &.dz-started {
    .dz-message {
      display: none;
    }
  }

  &.dz-drag-hover {
    border-style: solid;
    border-color: var(--prim);

    .dz-message {
      opacity: 0.5;
      animation: holdon .4s infinite;
    }
  }

  .dz-message {
    text-align: center;
    //margin: 3em 0;

    .dz-button {
      background: none;
      color: inherit;
      border: none;
      padding: 0;
      //font: inherit;
      cursor: pointer;
      outline: inherit;
    }
  }

  .dz-preview {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: .2em;
    width: 120px;
    margin: 0.5em;

    &::after {
      position: absolute;
      content: "";
      width: 100%;
      height: 120px;
      background-size: auto 200%;
      background: linear-gradient(0deg, var(--base), transparent);
      z-index: 0;
      opacity: 0;
      background-position: 0 120px;
      background-repeat: no-repeat;
      transition: opacity .2s var(--sleek), background-position .2s var(--sleek);

      border-radius: 10px;
    }

    &:hover {
      // Making sure that always the hovered preview element is on top
      z-index: 1000;

      .dz-details {
        opacity: 1;
      }

      &::after {
        opacity: 1;
        background-position: 0 0px;
      }
    }

    .dz-progress {
      display: none;
      /*
      height: 15px;
      border: 1px solid #aaa;
      .dz-upload {
        display: block;
        height: 100%;
        width: 0;
        background: green;
      }
      */
    }

    .dz-image {
      border-radius: 10px;
      overflow: hidden;
      height: 120px;
    }

    .dz-details {
      position: absolute;
      font-size: 1rem;
      font-family: var(--doto);
      font-weight: 900;
      margin: .3em .5em;
      bottom: 30px;
      color: var(--fore);
      opacity: 0;
      transition: opacity .2s var(--sleek);
      z-index: 1;
    }

    .dz-filename {
      font-size: .8rem
    }

    .dz-error-message {
      display: none;
    }

    &.dz-error {

      .dz-error-message,
      .dz-error-mark {
        display: block;
      }
    }

    &.dz-success {
      .dz-success-mark {
        display: block;
      }
    }

    .dz-error-mark,
    .dz-success-mark {
      display: none;
      position: absolute;
      left: 30px;
      top: 30px;
      width: 54px;
      height: 58px;
      left: 50%;
      margin-left: -(math.div(54px, 2));
    }

    .dz-remove {
      font-size: 1rem;
      font-family: var(--doto);
      font-weight: 700;
      background: var(--primSecondary);
      padding: .1em .5em;
      border-radius: 10px;
      transition: background .2s var(--sleek), font-weight .2s var(--sleek), border-color .2s var(--sleek), color .2s var(--sleek);
      border: 1px solid var(--primSecondary);

      &:hover {
        cursor: pointer;
        font-weight: 900;
        background: var(--base);
        color: var(--accent);
        border-color: var(--accent);
      }
    }

  }

}

// fails on compile, put here so it already exists on build and therfore work
.errCulprit {
  animation: flash 0.2s 3 steps(2);
  color: rgba(var(--err), 1);
}

@keyframes drop {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(.98);
  }
}

